src/Components/Popular/Popular.css
  .popular {
  text-align: center;
  padding: 50px 20px;
  margin: 0 auto;
  
  width: 100%;
  box-sizing: border-box;
}


.popular h1 {
  color: #171717;
  font-size: 50px;
  font-weight: 600;
}

.popular hr {
  width: 200px;
  height: 6px;
  border-radius: 10px;
  background-color: #252525;
  margin: auto;
}

/* .popular-item {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  margin-top: 40px;
} */

.popular-item {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
  gap: 20px;
  margin-top: 40px;
  justify-content: center;
  /* justify-content: space-between; */
}

/* Laptop */
@media(max-width:1280px){
  .popular h1{
    font-size: 40px;
  }

  .popular hr{
    width: 160px;
    height: 4px;
  }

  .popular-item{
    gap: 20px;
  }
}

/* Tablet */
@media(max-width:1024px){
  .popular h1{
    font-size: 30px;
  }

  .popular hr{
    width: 120px;
    height: 3px;
  }

  .popular-item{
    grid-template-columns: repeat(3, 1fr);
  }
}

/* Mobile */
@media(max-width:800px){
  .popular h1{
    font-size: 22px;
  }

  .popular hr{
    width: 100px;
  }

  .popular-item{
    /* grid-template-columns: 2fr; */
    grid-template-columns: repeat(2, 1fr);
  }
}

/* Small Mobile */
@media(max-width:500px){
  .popular-item{
    grid-template-columns: 1fr;
  }
}

